--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
+.main {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.footer,
+.header {
+  background-color: coral;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  text-align: center;
+  padding: 2%;
+  color: black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.beast {
+  margin: 50px;
+  background-color: burlywood;
+  text-align: center;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* span{
+  font-size: large;
+  font-weight: 900;
+} */
